# simple-otel-logger-py

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
Pylog/: __init__.py  logger.py  metrics.py  middleware.py  setting.py  telemetry.py  types.py
external_test/: test_logger.py
my_logger/: __init__.py  config.py  context.py  logger.py  metrics.py  middleware.py  processors.py  settings.py  telemetry.py
simple_otel_logger/: __init__.py  logger.py  logger_interface.py  structlog_config.py
simple_otel_logger_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pylog/: __init__.py
src/pylog/logger/: __init__.py  logger.py
src/pylog/metrics/: __init__.py  metrics.py
src/pylog/middleware/: __init__.py  middleware.py
src/pylog/setting/: __init__.py  setting.py
src/pylog/telemetry/: __init__.py  project.py  telemetry.py
src/pylog/types/: __init__.py  types.py
src/pylog/utils/: __init__.py  utils.py
src/simple_otel_logger_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/logger/: test_logger.py
tests/metrics/: test_metrics.py
tests/middleware/: test_middleware.py
tests/telemetry/: test_project.py  test_telemetry.py
tests/types/: test_types.py
