[project]
name = "simple-otel-logger-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-celery>=0.63b1",
    "opentelemetry-instrumentation-logging>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "prometheus-client>=0.25.0",
    "ruff>=0.15.15",
    "structlog>=25.5.0",
]
