[project]
name = "pylog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-celery>=0.63b1",
    "opentelemetry-instrumentation-logging>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "prometheus-client>=0.25.0",
    "ruff>=0.15.15",
    "structlog>=25.5.0",
    "uvicorn>=0.49.0",
    "fastapi>=0.136.3",
    "opentelemetry-exporter-prometheus>=0.63b1",
    "dotenv>=0.9.9",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.4.0"
]

[tool.ruff]
line-length = 79


[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.21,<=0.12.0"]
